<resources>

    <string name="app_name">MovieDB_20</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_up_coming">Up Coming</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_popular">Popular</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="title_overview">Overview</string>
    <string name="title_producers">Producers</string>
    <string name="title_release">Release</string>
    <string name="title_genres">Genres</string>
    <string name="title_casts">Casts</string>
    <string name="title_name">Name</string>
    <string name="title_headquarters">Headquarters</string>
    <string name="title_home_page">Home Page</string>
    <string name="title_origin_country">Origin Country</string>
    <string name="title_birthday">Birthday</string>
    <string name="title_place_of_birth">Place of birth</string>
    <string name="title_movie">Movie</string>
    <string name="title_biography">Biography</string>

</resources>
